# us-stock-bot

./: .gitignore  crew_agent.py  main.py  pyproject.toml  simple_agent.py
.github/workflows/: stock_bot.yml
src/: db_manager.py
src/agents/: llm_agent.py  news_agent.py
src/collectors/: stock_loader.py
src/strategies/: indicators.py
src/utils/: notifier.py
