[project]
name = "stock-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.10.0",
    "google-genai>=1.60.0",
    "groq>=1.0.0",
    "numpy>=2.4.1",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "textblob>=0.19.0",
    "typeguard>=4.4.4",
    "yfinance>=1.1.0",
]
